# labs-in-term-3

./: .gitignore  Ball.cpp  Ball.hpp  CMakeLists.txt  Color.h  Dust.cpp  Dust.h  Physics.cpp  Physics.h  Point.h  Velocity.h  World.cpp  World.h  functions.cpp  functions.h  lib.cpp  lib.h  main.cpp  my_allocator.h  my_container.h  version.h.in
.github/: workflows  workflows.yml
.github/workflows/: release.ym  release.yml
Controller/: Controller.cpp  Controller.h
Model/: Circle.h  Document.cpp  Document.h  Rectangle.h  Shape.h
View/: View.cpp  View.h
copys/: my_allocator copy.h  my_container copy.h
gtest_tests/: CMakeLists.txt  CmakeLists.txt  tests.cpp
